✨ add option setRemoveNoAutoCreateUser to remove the NO_AUTO_CREATE_USER from the dump

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
   "scripts": {
     "infection": "XDEBUG_MODE=coverage vendor/bin/infection --threads=4 --only-covered --min-msi=91 --min-covered-msi=91 --ansi",
     "phpstan": "vendor/bin/phpstan  --ansi",
-    "test": "XDEBUG_MODE=coverage vendor/bin/phpunit -c tests/phpunit.xml --testdox --color=always",
-    "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml --testdox"
+    "test": "XDEBUG_MODE=coverage vendor/bin/phpunit -c tests/phpunit.xml --color=always",
+    "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml"
   }
 }
