--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   ],
   "homepage": "https://phpsu.de/",
   "require": {
-    "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+    "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
     "ext-json": "*",
     "composer-runtime-api": "^2.0.0",
     "phpsu/shellcommandbuilder": "^2.0",
@@ -32,9 +32,9 @@
     "symfony/process": "^5.0 || ^6.0 || ^7.0"
   },
   "require-dev": {
-    "infection/infection": "^0.28.1",
-    "phpunit/phpunit": "^10.5.18",
-    "pluswerk/grumphp-config": "^7.0.1"
+    "infection/infection": "^0.28.1 || ^0.29.14",
+    "phpunit/phpunit": "^10.5.18 || ^12.1.6",
+    "pluswerk/grumphp-config": "^7.0.1 || ^10.1.3"
   },
   "suggest": {
     "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
